@@ -10,6 +10,7 @@ export(fusions_filter)
 export(get_files_ctime)
 export(get_files_mtime)
 export(get_pp_samplegroup)
+export(get_split_seqs)
 export(merge_table_files)
 export(muts2mutation_mapper)
 export(muts2oncoprinter)
@@ -18,6 +19,8 @@ export(set_colors)
 export(set_tools)
 export(show_handers)
 export(show_mhanders)
+export(split_col_data)
+export(split_row_data)
 import(configr)
 import(stringr)
 import(utils)
